--- a/team-members/phuttargue.html
+++ b/team-members/phuttargue.html
@@ -164,7 +164,7 @@
               Email: <a href="mailto:notsoontorn5678@gmail.com">notsoontorn5678@gmail.com</a>
             </span>
             <span class="pill fb">
-              Facebook: <a href="https://www.facebook.com/phuttargue.soontorn" target="_blank" rel="noopener">phuttargue soontorn</a>
+              Facebook: <a href="https://www.facebook.com/puttargur.soontorn" target="_blank" rel="noopener">phuttargue soontorn</a>
             </span>
           </div>
 
