--- a/team-members/phuttargue.html
+++ b/team-members/phuttargue.html
@@ -123,7 +123,8 @@
     @media(max-width:760px){.profile{grid-template-columns:1fr;}.avatar-wrap{margin-top:-90px;}}
 
     /* 🌸 ซากุระพื้นหลัง */
-     .bg-sakura {
+     /* 🌸 ซากุระพื้นหลัง */
+.bg-sakura {
   position: fixed;
   pointer-events: none;
   z-index: 0; /* อยู่หลัง content แต่ไม่หายไปหลัง background */
@@ -134,6 +135,8 @@
 .shell, .card, .profile, .section, footer, .crumbs, .avatar, .btn {
   position: relative;
   z-index: 1;
+}
+
   </style>
 </head>
 <body>
@@ -164,7 +167,7 @@
               Email: <a href="mailto:notsoontorn5678@gmail.com">notsoontorn5678@gmail.com</a>
             </span>
             <span class="pill fb">
-              Facebook: <a href="https://www.facebook.com/puttargur.soontorn" target="_blank" rel="noopener">phuttargue soontorn</a>
+              Facebook: <a href="https://www.facebook.com/phuttargue.soontorn" target="_blank" rel="noopener">phuttargue soontorn</a>
             </span>
           </div>
 
