--- a/team-members/phuttargue.html
+++ b/team-members/phuttargue.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Phuttargue Soontorn — B-8 Lungs</title>
+  <title>Phuttargue Soontorn team— B-8 Lungs</title>
 
   <!-- ฟอนต์ -->
   <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;800&family=Quicksand:wght@500;700&display=swap" rel="stylesheet">
